tests/fixtures/invalid/int_sub_str.py
# Cannot subtract Int and Str
x: int = 1 - "hello"
